--- a/app/views/phrasing/_initializer.html.haml
+++ b/app/views/phrasing/_initializer.html.haml
@@ -2,15 +2,11 @@
   .text-options#zenpenbubble
     .options
       %span.no-overflow
-        %span.lengthen.ui-inputs 
-          %button.url.useicons &#xe005;
+        %span.lengthen.ui-inputs
+          %button.url A
           %input.url-input{placeholder: "Type or Paste URL here", type: "text"}/
           %button.bold b
           %button.italic i
-
-
-
-
 
   #phrasing-edit-mode-bubble
     #phrasing-edit-mode
